[gd_scene load_steps=15 format=3 uid="uid://c4gp86aacdhip"]

[ext_resource type="Script" path="res://Assets/MainPlayer/PlayerControllerAlien.gd" id="1_wp7h1"]
[ext_resource type="Texture2D" uid="uid://dfbpxvglh8du6" path="res://Assets/Nuotraukos/Character3/Squat1.png" id="2_ys0ra"]
[ext_resource type="Texture2D" uid="uid://cdb81uej1a1va" path="res://Assets/Nuotraukos/Character3/Squat2.png" id="3_jdcf2"]
[ext_resource type="Texture2D" uid="uid://se45tajoo6tk" path="res://Assets/Nuotraukos/Character3/Run1.png" id="4_6u727"]
[ext_resource type="Texture2D" uid="uid://dgl15vko8pxao" path="res://Assets/Nuotraukos/Character3/Run2.png" id="5_v72bw"]
[ext_resource type="Texture2D" uid="uid://bpox4caldxxwi" path="res://Assets/Nuotraukos/Character3/Run3.png" id="6_57dou"]
[ext_resource type="Texture2D" uid="uid://bw0ebtg1xv67r" path="res://Assets/Nuotraukos/Character3/Run4.png" id="7_tlt6r"]
[ext_resource type="Texture2D" uid="uid://tf7oflsrf6j0" path="res://Assets/Nuotraukos/Character3/Stand.png" id="8_tbqvu"]
[ext_resource type="Texture2D" uid="uid://b4oeim2710qla" path="res://Assets/Nuotraukos/Character3/Stand2.png" id="9_qdr84"]
[ext_resource type="Texture2D" uid="uid://rq6pqber8lgy" path="res://Assets/Nuotraukos/Character3/Jump.png" id="10_htje3"]
[ext_resource type="PackedScene" uid="uid://c2uu63oycih8t" path="res://Assets/Weapons/gun.tscn" id="11_u87dk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6acrb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jdcf2")
}],
"loop": true,
"name": &"CrouchWalking",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ys0ra")
}],
"loop": true,
"name": &"Crouching",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6u727")
}, {
"duration": 1.0,
"texture": ExtResource("5_v72bw")
}, {
"duration": 1.0,
"texture": ExtResource("6_57dou")
}, {
"duration": 1.0,
"texture": ExtResource("7_tlt6r")
}],
"loop": true,
"name": &"Running",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_tbqvu")
}, {
"duration": 1.0,
"texture": ExtResource("9_qdr84")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_htje3")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_diw0w"]
radius = 15.0
height = 72.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jdbh3"]
radius = 13.75
height = 42.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
collision_layer = 3
script = ExtResource("1_wp7h1")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6acrb")
animation = &"idle"
autoplay = "idle"

[node name="NormalColision" type="CollisionShape2D" parent="."]
position = Vector2(-3, 1)
shape = SubResource("CapsuleShape2D_diw0w")

[node name="CrouchingColision" type="CollisionShape2D" parent="."]
position = Vector2(-2, 16)
shape = SubResource("CapsuleShape2D_jdbh3")
disabled = true
debug_color = Color(0.964706, 0.133333, 0.345098, 0.419608)

[node name="RightCheckAbove" type="RayCast2D" parent="."]
position = Vector2(10.595, 3)
target_position = Vector2(0, -45)

[node name="LeftCheckAbove" type="RayCast2D" parent="."]
position = Vector2(-14, 3)
target_position = Vector2(0, -45)

[node name="gun" parent="." instance=ExtResource("11_u87dk")]
